--- a/Front/Car-Rental/src/app/app.component.html
+++ b/Front/Car-Rental/src/app/app.component.html
@@ -2,8 +2,8 @@
   <div class="container-fluid">
     <a class="navbar-brand">SD Car Rental Service</a>
     <form class="d-flex">
-      <button type="button" routerLink="login" class="btn btn-outline-light me-3">Login</button>
-      <button type="button" routerLink="register" class="btn btn-outline-light">Sign Up</button>
+      <button type="button" routerLink="log" class="btn btn-outline-light me-3">Login</button>
+      <button type="button" routerLink="signup" class="btn btn-outline-light">Sign Up</button>
     </form>
   </div>
 </nav>
